get_contract once + fix picker flickering bug

--- a/frontend/src/components/DiamondPicker/DiamondPicker.scss
+++ b/frontend/src/components/DiamondPicker/DiamondPicker.scss
@@ -1,7 +1,6 @@
 .carousel-root {
   .carousel {
     width: 60% !important;
-    min-height: 300px;
     margin: 0 auto !important;
 
     .token-id {
